// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentComponent eventRectangles null should not render 1`] = `
<div
  id="root0"
  ngx-d3timeline-content=""
>
  
</div>
`;

exports[`ContentComponent eventRectangles null should not render when draggingRectangle set 1`] = `
<div
  id="root1"
  ngx-d3timeline-content=""
>
  
</div>
`;

exports[`ContentComponent eventRectangles null should not render when dropRectangle set 1`] = `
<div
  id="root2"
  ngx-d3timeline-content=""
>
  
</div>
`;

exports[`ContentComponent eventRectangles set should render 1`] = `
<div
  id="root3"
  ngx-d3timeline-content=""
>
  
  <g
    class="content-group"
  >
    
    <g
      ngx-d3timeline-event-rectangle=""
    >
      <g />
    </g>
    <g
      ngx-d3timeline-event-rectangle=""
    >
      <g />
    </g>
    
    <g
      class="drop-event-rectangle"
      ngx-d3timeline-event-rectangle=""
    >
      <g />
    </g>
    
    <g
      ngx-d3timeline-event-rectangle=""
    >
      <g />
    </g>
  </g>
</div>
`;
